--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <version>7.10.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.17.0</version>
+        </dependency>
     </dependencies>
 
 </project>
